--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "14.1.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.18",
