--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "mac-scrollbar": "^0.13.6",
     "next": "14.1.3",
     "react": "^18",
     "react-icons": "^5.2.1"
