--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mac-scrollbar": "^0.13.6",
     "next": "14.1.3",
     "react": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.2.18",
@@ -34,6 +35,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "storybook": "^8.0.0",
